# aiDocAssistant

./: README.md
mock/: .env.example  .gitignore  INTERVIEW_BRIEF.md  PROJECT_PLAN.md  README.md  pyproject.toml
mock/.cursor/rules/: mock-rules.mdc
mock/backend/: __init__.py
mock/backend/app/: __init__.py  config.py  main.py
mock/backend/app/clients/: __init__.py  base_model_client.py  openai_client.py  streaming_handler.py
mock/backend/app/models/: api_responses.py  chat.py  document.py
mock/backend/app/routes/: chat.py  documents.py
mock/backend/app/services/: chat_service.py  document_service.py  session_service.py
mock/backend/app/utils/: content_extraction.py  file_utils.py  sse_utils.py
mock/backend/tests/unit/: test_task_1_2_project_structure.py  test_task_1_3_config.py  test_task_2_1_document_service.py  test_task_2_2_content_extraction.py  test_task_2_2_file_utils.py  test_task_3_1_model_clients.py  test_task_3_2_streaming.py  test_task_4_1_document_routes.py  test_task_4_2_chat_routes.py  test_task_4_3_session_service.py
mock/frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
mock/frontend/src/: App.tsx
mock/frontend/src/api/: client.ts
mock/frontend/src/components/: ChatInterface.tsx  DocumentList.tsx  DocumentUpload.tsx
mock/frontend/src/hooks/: useDocuments.ts  useStreaming.ts
mock/frontend/src/types/: chat.ts  document.ts
mock/tasks/: README.md  task-1.1-poetry-init.md  task-1.2-project-structure.md  task-1.3-env-config.md  task-2.1-document-service.md  task-2.2-file-validation.md  task-3.1-model-client.md  task-3.2-streaming.md  task-4.1-upload-endpoint.md  task-4.2-chat-endpoint.md  task-4.3-session-service.md  task-5.1-frontend-setup.md  task-5.2-upload-ui.md  task-5.3-chat-ui.md  task-6.1-integration-tests.md  task-6.2-docs-deployment.md
(+4 files in other folders)
